--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "bookdownproj"
+book_filename: "main"
 output_dir: docs
 delete_merged_file: true
 edit: https://github.com/YOUR GITHUB USERNAME/YOUR REPO NAME/edit/main/%s
