--- a/_output.yml
+++ b/_output.yml
@@ -6,3 +6,9 @@ bookdown::gitbook:
         <li><a href="./">SHORT TITLE HERE</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+    download: ["pdf"]
+bookdown::pdf_book:
+  includes:
+    in_header: preamble.tex
+  latex_engine: pdflatex
+  keep_tex: yes
